fixed button spacing and color on resume

--- a/src/resume/button_panel_styling.module.css
+++ b/src/resume/button_panel_styling.module.css
@@ -3,8 +3,8 @@
   font-size: 18px;
   border-radius: 40px;
   border-width: 3px;
-  border-color: #DDA0DD;
-  color: #DDA0DD;
+  border-color: white;
+  color: white;
   background-color: transparent;
   font-weight: bold;
   justify-self: stretch;
@@ -13,7 +13,8 @@
 .button_container {
   display: grid;
   grid-template-columns: auto auto auto;
-  justify-content: center;
+  justify-items: center;
+  grid-gap: 1%;
   flex: 1;
   margin-right: 15%;
   margin-left: 15%;
